--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <h2>Upload CSV File</h2>
-  <form action="http://localhost:3000/csv/convert" method="POST" enctype="multipart/form-data">
+  <form action="http://localhost:3000/pdf/convert" method="POST" enctype="multipart/form-data">
     <label for="file1">Select CSV file:</label>
-    <input type="file" name="file1" id="file1" accept=".csv" required>
+    <input type="file" name="file1" id="file1" accept="" required>
     <br><br>
     <button type="submit">Upload</button>
   </form>
